# cdm

./: Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
shell/: cdm.sh
src/: config.rs  display.rs  main.rs
src/history/: coaccess.rs  mod.rs  store.rs
src/inline/: picker.rs
