[package]
name = "cdm"
version = "0.1.0"
edition = "2021"
description = "cd with memory — fast filesystem navigation"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
regex = "1"
libc = "0.2"
dirs = "5"
